--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,7 @@
             </div>
         </div>
     </section>
+    <!-- i dont unnderstand anything you are doing -->
+     <!-- Day 16 :-: I dont want to loose streak -->
 </body>
 </html> 
