--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,6 @@
     </section>
     <!-- i dont unnderstand anything you are doing -->
      <!-- Day 16 :-: I dont want to loose streak -->
+     <!-- Day 18 :-: I dont want to loose streak -->
 </body>
 </html> 
