--- a/src/index.html
+++ b/src/index.html
@@ -55,5 +55,6 @@
      <!-- Day 16 :-: I dont want to loose streak -->
      <!-- Day 18 :-: I dont want to loose streak -->
      <!-- Day 33 :-: I dont want to loose streak -->
+     <!-- Day 34 :-: I dont want to loose streak -->
 </body>
 </html> 
