--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,6 @@
      <!-- Day 18 :-: I dont want to loose streak -->
      <!-- Day 33 :-: I dont want to loose streak -->
      <!-- Day 34 :-: I dont want to loose streak -->
+     <!-- Day 35 :-: I dont want to loose streak -->
 </body>
 </html> 
