--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                          <label class="add-image" for="chat-image"><i class="fas fa-paperclip"></i>A</label>
                          <input type="file" name="chat-image" id="chat-image" accept="image/jpeg,image/png"
                          onchange="handle_image_uploads()" multiple> 
-                         <label class="add-camera" for="chat-camera"><i class="fas fa-paperclip"></i>C</label>
+                         <label class="add-camera" for="chat-camera"><i class="fas fa-camera"></i>C</label>
                          <input type="file" name="chat-camera" id="chat-camera" accept="camera/jpeg,camera/png"
                          onchange="handle_camera_uploads()" multiple> 
                     </span>
