Added Camera 📸 Input

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                          <input type="file" name="chat-image" id="chat-image" accept="image/jpeg,image/png"
                          onchange="handle_image_uploads()" multiple> 
                          <label class="add-camera" for="chat-camera"><i class="fas fa-camera"></i>C</label>
-                         <input type="file" name="chat-camera" id="chat-camera" accept="camera/jpeg,camera/png"
+                         <input type="file" capture="user" name="chat-camera" id="chat-camera" accept="camera/jpeg,camera/png"
                          onchange="handle_camera_uploads()" multiple> 
                     </span>
                     <div class="sendMsg" onclick="send_message()">>></div>
